Stage Drive/Backend/justbitteam-stagedriving_be-2881552384fc/.kube/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stagedriving-staging-be
  labels:
    app: stagedriving-staging-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stagedriving-staging-be
  template:
    metadata:
      labels:
        app: stagedriving-staging-be
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: stagedriving-staging
      containers:
      - image: gcr.io/stage-driving/bitbucket-justbitteam-stagedriving_be:4acd8d4b1f9e68e71bd13eac949bb7af7cece625
        name: stagedriving-staging-be
        resources:
          requests:
            cpu: 20m
        ports:
        - containerPort: 8080
        - containerPort: 9900
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/confs
#        livenessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 9900
#          initialDelaySeconds: 10
#          timeoutSeconds: 1
#        readinessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 9900
#          initialDelaySeconds: 10
#          timeoutSeconds: 1
