Stage Drive/Backend/justbitteam-stagedriving_be-2881552384fc/.kube/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stagedriving-staging-be
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "public-ip"
spec:
  rules:
  - host: api.staging.stagedriving.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: stagedriving-staging-be
          servicePort: 80
      - path: /
        backend:
          serviceName: stagedriving-staging-be
          servicePort: 80
      #- path: /admin
      #  backend:
      #    serviceName: stagedriving-staging-be
      #    servicePort: 9900
